@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2025-09-07T01:21:25Z",
+  "timestamp" : "2025-09-08T01:20:01Z",
   "count_outdated" : 1566,
   "uniques_outdated" : 1086,
-  "count" : 1579,
-  "uniques" : 1099,
+  "count" : 1580,
+  "uniques" : 1100,
   "clones" : [
     {
       "timestamp": "2025-08-25T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "count": 1,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 1, 2 ]
     },
     {
       "timestamp": "2025-08-27T00:00:00Z",
@@ -88,6 +88,15 @@
     },
     {
       "timestamp": "2025-09-06T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-09-07T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
