@@ -4,8 +4,8 @@
   "clones": [
     {
       "timestamp": "2025-08-25T00:00:00Z",
-      "count": 2,
-      "uniques": 2
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2025-08-27T00:00:00Z",
@@ -49,6 +49,11 @@
     },
     {
       "timestamp": "2025-09-06T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-09-07T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
