@@ -1,3 +1,12 @@
+2025-09-08T01:20:01Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17536819616 # 760
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-08
+* notice: last 14d: unq all: 6 13
+* notice: prev accum: outdated-unq outdated-all / unq all: 1086 1566 / 1099 1579
+* notice: next accum: outdated-unq outdated-all / unq all: 1086 1566 / 1100 1580
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -1 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2025-08-25 2025-09-07]
+
 2025-09-07T01:21:25Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17521985541 # 759
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-07
